[tool.poetry]
name = "core-utilities"
version = "0.1.0"
description = "A base FastAPI framework template with router injection, CORS, logging, and middleware support."
authors = ["Sachin Sharma <sachin27sharma@gmail.com>"]
license = "Self"
readme = "README.md"
packages= [{include = "src"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
loguru = "^0.7.2"
PyYAML = "^6.0.2"
pydantic-settings = "^2.2.1"
pandas = "^2.2.2"
polars = "^0.20.16"
numpy = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"



[build-system]
requires = ["poetry-core>=1.0.0", "poetry>=2.1.3"]
build-backend = "poetry.core.masonry.api"

